--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <section class="task-list">
+             <h1 id="new-task-submit">Devashish Tyagi</h1>
             <h2>Tasks</h2>
 
             <div id="tasks">
